# hisobchi-ai

./: .dockerignore  .editorconfig  .env.example  .flake8  .gitignore  Dockerfile  README.md  docker-compose.dev.yml  docker-compose.prod.yml  pyproject.toml
.github/workflows/: ci.yml
app/: main.py
app/api/: auth.py  deps.py  user.py
app/bot/: handlers.py  main.py
app/core/: config.py  database.py  redis_utils.py  security.py
app/models/: transaction.py  user.py
app/schemas/: auth.py  transaction.py  user.py
